# greenhorn

./: LICENSE  greenhorn.cabal  stack.yaml
proof/: CataNN.idr
src/Greenhorn/: Cortex.hs  Evolve.hs  Morphology.hs  Mutator.hs  Stream.hs
